tests/ui/consts/const-eval/transmute-const.stderr
error[E0080]: constructing invalid value: encountered 0x03, but expected a boolean
  --> $DIR/transmute-const.rs:4:29
   |
LL | static FOO: bool = unsafe { mem::transmute(3u8) };
   |                             ^^^^^^^^^^^^^^^^^^^ evaluation of `FOO` failed here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
